--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.hero__heading {
+    line-height: 5.5rem;
+    background: linear-gradient(to right, rgba(101, 78, 163,1), rgb(221, 152, 181));
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.Contact__btn:hover{
+  color: white;  
+  background: linear-gradient(to right, rgba(101, 78, 163,1), rgb(221, 152, 181))border-box; 
+  border-radius: 1em;
+  border: 4px solid transparent;
+  transition: 0.5s ease all;
+  transform: translateY(-10px);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* BREAKPOINTS */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+/* @media screen and (max-width:900px){
+    .hero__heading{
+        font-size: 3rem;
+        line-height: 4rem;
+    }
 
-.App-link {
-  color: #61dafb;
-}
+    .hero_title{
+        font-size: 1rem;
+    }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width:660px){
+    .hero__heading{
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+
+    .hero_title{
+        font-size: 0.7rem;
+    }
+}    
+
+@media screen and (max-width:400px){
+    .hero__heading{
+        font-size: 1.5rem;
+        line-height: 1.9rem;
+    }
+
+    .hero_title{
+        font-size: 0.5rem;
+    }
+
+    .Contact__btn button{
+        widows: 7.8rem;
+    }
 }
+} */
